@@ -22,71 +22,6 @@
 #include <errno.h>
 #include <uchar.h>
 
-size_t mbrtoc16 (char16_t *__restrict__ pc16,
-		 const char *__restrict__ s,
-		 size_t n,
-		 mbstate_t *__restrict__ state)
-{
-/* wchar_t should compatible to char16_t on Windows */
-    return mbrtowc((wchar_t *)pc16, s, n, state);
-}
-
-size_t c16rtomb (char *__restrict__ s,
-		 char16_t c16,
-		 mbstate_t *__restrict__ state)
-{
-/* wchar_t should compatible to char16_t on Windows */
-    return wcrtomb(s, c16, state);
-}
-
-size_t mbrtoc32 (char32_t *__restrict__ pc32,
-		 const char *__restrict__ s,
-		 size_t n,
-		 mbstate_t *__restrict__ __UNUSED_PARAM(ps))
-{
-    if (*s == 0)
-    {
-	*pc32 = 0;
-	return 0;
-    }
-
-    /* ASCII character - high bit unset */
-    if ((*s & 0x80) == 0)
-    {
-	*pc32 = *s;
-	return 1;
-    }
-
-    /* Multibyte chars */
-    if ((*s & 0xE0) == 0xC0) /* 110xxxxx needs 2 bytes */
-    {
-	if (n < 2)
-	    return (size_t)-2;
-
-	*pc32 = ((s[0] & 31) << 6) | (s[1] & 63);
-	return 2;
-    }
-    else if ((*s & 0xf0) == 0xE0) /* 1110xxxx needs 3 bytes */
-    {
-	if (n < 3)
-	    return (size_t)-2;
-
-	*pc32 = ((s[0] & 15) << 12) | ((s[1] & 63) << 6) | (s[2] & 63);
-	return 3;
-    }
-    else if ((*s & 0xF8) == 0xF0) /* 11110xxx needs 4 bytes */
-    {
-	if (n < 4)
-	    return (size_t)-2;
-
-	*pc32 = ((s[0] & 7) << 18) | ((s[1] & 63) << 12) | ((s[2] & 63) << 6) | (s[4] & 63);
-	return 4;
-    }
-
-    errno = EILSEQ;
-    return (size_t)-1;
-}
-
 size_t c32rtomb (char *__restrict__ s,
 		 char32_t c32,
 		 mbstate_t *__restrict__ __UNUSED_PARAM(ps))
